objects/SFDC_Issue__c.object
<CustomObject>
    <description>Issue related to a Project</description>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Description__c</fullName>
        <description>Description of the Issue in detail.</description>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Priority__c</fullName>
        <label>Issue Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - High</fullName>
                </value>
                <value>
                    <fullName>4 - Very Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Open</fullName>
                </value>
                <value>
                    <fullName>1 - Being Addressed</fullName>
                </value>
                <value>
                    <fullName>2 - On Hold</fullName>
                </value>
                <value>
                    <fullName>3 - In Escalation</fullName>
                </value>
                <value>
                    <fullName>4 - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Issues are details of the master project record</description>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>R00N300000021XplEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Other Subs</fullName>
                </value>
                <value>
                    <fullName>Roofing Subs</fullName>
                </value>
                <value>
                    <fullName>Electrical Sub</fullName>
                </value>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts Not In Stock</fullName>
                </value>
                <value>
                    <fullName>Long Lead Time Item</fullName>
                </value>
                <value>
                    <fullName>New Part</fullName>
                </value>
                <value>
                    <fullName>Vendor Issue</fullName>
                </value>
                <value>
                    <fullName>Structural Engineering Required</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineering Required</fullName>
                </value>
                <value>
                    <fullName>Permit Review</fullName>
                </value>
                <value>
                    <fullName>New Permit Process</fullName>
                </value>
                <value>
                    <fullName>Permit Other</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Non Responsive</fullName>
                </value>
                <value>
                    <fullName>Lack of Information</fullName>
                </value>
                <value>
                    <fullName>Design Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Priority__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISS - {0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>